--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 </header>
 
 <nav>
-  <a href="#about">About</a>
-  <a href="#research">Research</a>
-  <a href="#publications">Publications</a>
-  <a href="#futurelab">Future Lab</a>
-  <a href="#contact">Contact</a>
+  <a href="index.html">About</a>
+  <a href="research.html">Research</a>
+  <a href="publications.html">Publications</a>
+  <a href="futurelab.html">Future Lab</a>
+  <a href="contact.html">Contact</a>
 </nav>
 
 <section id="about">
@@ -160,3 +160,4 @@
 
 </body>
 </html>
+
