--- a/futureproject.html
+++ b/futureproject.html
@@ -21,7 +21,7 @@
   </nav>
 
   <section>
-    <h2>Future Lab</h2>
+    <h2>Future Projects</h2>
     <p>
       In my future lab, I aim to establish an interdisciplinary research group
       that integrates genomics, field studies, and computational approaches
@@ -34,3 +34,4 @@
   </footer>
 </body>
 </html>
+
