--- a/futureproject.html
+++ b/futureproject.html
@@ -16,12 +16,12 @@
     <a href="index.html">About</a>
     <a href="research.html">Research</a>
     <a href="publications.html">Publications</a>
-    <a href="futureproject.html">Future Lab</a>
+    <a href="futureproject.html">Future Project</a>
     <a href="contact.html">Contact</a>
   </nav>
 
   <section>
-    <h2>Future Projects</h2>
+    <h2>Future Project</h2>
     <p>
       In my future lab, I aim to establish an interdisciplinary research group
       that integrates genomics, field studies, and computational approaches
@@ -34,4 +34,5 @@
   </footer>
 </body>
 </html>
+
 
