--- a/futureproject.html
+++ b/futureproject.html
@@ -23,7 +23,7 @@
   <section>
     <h2>Future Project</h2>
     <p>
-      In my future lab, I aim to establish an interdisciplinary research group
+      In my future project, I aim to establish an interdisciplinary research group
       that integrates genomics, field studies, and computational approaches
       to address pressing questions in biodiversity conservation and evolutionary biology.
     </p>
@@ -34,5 +34,6 @@
   </footer>
 </body>
 </html>
+
 
 
