--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beibei - About</title>
+  <title>Beibei Liu - About</title>
+  <style>
+  body {
+    background-image: url(https://en.wikipedia.org/wiki/Maize);
+    background-size: cover;       /* scale to cover entire page */
+    background-repeat: no-repeat; /* don’t tile */
+    background-attachment: fixed; /* stays fixed while scrolling */
+  }
+</style>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -33,4 +41,5 @@
   </footer>
 </body>
 </html>
+
 
