--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Beibei Liu - About</title>
   <style>
   body {
-    background-image: url("Zea_mays.jpg");
+    background-image: url("Picture1.jpg");
     background-size: cover;       /* scale to cover entire page */
     background-repeat: no-repeat; /* don’t tile */
     background-attachment: fixed; /* stays fixed while scrolling */
@@ -41,6 +41,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
