--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      opacity: 0.5;          /* 50% transparency */
+      opacity: 0.3;          /* 50% transparency */
       z-index: -2;            /* behind all content */
     }
 
@@ -38,7 +38,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 255, 255, 0.3); /* white overlay, 30% opacity */
+      background-color: rgba(255, 255, 255, 0.5); /* white overlay, 30% opacity */
       z-index: -1; /* sits between background and content */
     }
 
@@ -51,7 +51,7 @@
     nav a {
       margin-right: 15px;
       text-decoration: none;
-      color: #000;
+      color: #fff;
     }
   </style>
   <link rel="stylesheet" href="style.css">
@@ -83,6 +83,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
