--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    opacity: 0.3;          
+    opacity: 0.2;          
     z-index: -2;            
   }
 
@@ -58,7 +58,7 @@
 </head>
 <body>
   <header>
-    <h1>Beibei</h1>
+    <h1>Beibei Liu</h1>
     <p>Postdoctoral Scholar | Ecology & Evolution | UC Davis</p>
   </header>
 
@@ -83,6 +83,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
