--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <h2>About Me</h2>
     <p>
       I am a postdoctoral scholar in the Department of Ecology and Evolution at UC Davis.
-      My research focuses on understanding ecological dynamics, evolutionary mechanisms,
-      and their interactions across scales.
+      My research focuses on the evolution of one major selfish genetic elements (SGE) -- 
+      Transposable elements (TEs) in maize and its ancestor Teosinte.
     </p>
   </section>
 
@@ -83,6 +83,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
